account creation in login page and the login authentication